<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="129dp"
            android:layout_height="53dp"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:src="@mipmap/more_logo"
            android:layout_marginTop="38dp"
            android:layout_marginBottom="37dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42.66dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/text_black"
                android:layout_centerVertical="true"
                android:text="@string/other_hyr"
                android:layout_marginLeft="15dp"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@color/divider_gray"
                android:layout_alignParentBottom="true" />
        </RelativeLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/other_about_introduce"
            android:textColor="@color/text_gray"
            android:textSize="12.33sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="42.66dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/text_black"
                    android:layout_centerVertical="true"
                    android:text="当前版本" />

                <TextView
                    android:id="@+id/tvVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/red"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/divider_gray"
                    android:layout_alignParentBottom="true" />


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="42.66dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/text_black"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="12dp"
                    android:text="@string/other_weixin_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/text_gray"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/other_weixin_desc"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/divider_gray"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="42.66dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/text_black"
                    android:layout_centerVertical="true"
                    android:text="@string/other_weibo_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/text_gray"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/other_weibo_desc"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/divider_gray"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <!--隐私协议-->
            <RelativeLayout
                android:id="@+id/rlPrivateProtocol"
                android:layout_width="match_parent"
                android:layout_height="42.66dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/text_black"
                    android:layout_centerVertical="true"
                    android:text="@string/other_private_protocol" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/red"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="查看"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/divider_gray"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlPhone"
                android:layout_width="match_parent"
                android:layout_height="42.66dp"
                android:paddingRight="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/text_black"
                    android:layout_centerVertical="true"
                    android:text="@string/other_kefu_title" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="13sp"
                    android:textColor="@color/red"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:text="@string/other_kefu_tel"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1px"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/divider_gray"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="42.66dp"
            android:paddingRight="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/other_kefu_time"
                android:textColor="@color/text_gray" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>